--- a/COVID-19.ipynb
+++ b/COVID-19.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CITS4403: Computational Modelling - Group Project\n",
+    "## Corona Virus Outbreak - Dataset from Kaggle\n",
+    "### By Jayden Kur, 21988713\n",
+    "### Roarke, 21742366\n",
+    "### Andrew, "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
