--- a/COVID-19.ipynb
+++ b/COVID-19.ipynb
@@ -726,7 +726,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "node_list = [node_name,node_sizes]"
+    "node_list = [node_names,node_sizes]"
    ]
   },
   {
