--- a/COVID-19.ipynb
+++ b/COVID-19.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 601,
+   "execution_count": 862,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 602,
+   "execution_count": 863,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 603,
+   "execution_count": 864,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 604,
+   "execution_count": 865,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
        "4  1000000005  female  20s  Seongbuk-gu        31/1/20"
       ]
      },
-     "execution_count": 604,
+     "execution_count": 865,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 605,
+   "execution_count": 866,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 606,
+   "execution_count": 867,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "1000000005  female  20s  Seongbuk-gu        31/1/20"
       ]
      },
-     "execution_count": 606,
+     "execution_count": 867,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 607,
+   "execution_count": 868,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 608,
+   "execution_count": 869,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 609,
+   "execution_count": 870,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 610,
+   "execution_count": 871,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 611,
+   "execution_count": 872,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
        "138"
       ]
      },
-     "execution_count": 611,
+     "execution_count": 872,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 612,
+   "execution_count": 873,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 613,
+   "execution_count": 874,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 613,
+     "execution_count": 874,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 614,
+   "execution_count": 875,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 614,
+     "execution_count": 875,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 615,
+   "execution_count": 876,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "54"
       ]
      },
-     "execution_count": 615,
+     "execution_count": 876,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 616,
+   "execution_count": 877,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 617,
+   "execution_count": 878,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 618,
+   "execution_count": 879,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +531,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 619,
+   "execution_count": 880,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df = df.set_index('confirmed_date')\n",
+    "#df = df[df.index < '0230']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 881,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 620,
+   "execution_count": 882,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,13 +561,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 621,
+   "execution_count": 883,
    "metadata": {},
    "outputs": [],
    "source": [
     "node_names = df['city'].value_counts().index.to_list()\n",
     "node_sizes = df['city'].value_counts().to_list()\n",
-    "#node_combined = [node_names[ii]+' '+str(node_sizes[ii]) for ii in range(len(node_names))]\n",
     "labels = {}\n",
     "for name,size in zip(node_names,node_sizes):\n",
     "    labels[name] = name+ '\\n' +str(size)"
@@ -565,222 +574,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 622,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Gyeongsan-si': 'Gyeongsan-si\\n614',\n",
-       " 'Seongnam-si': 'Seongnam-si\\n109',\n",
-       " 'Cheonan-si': 'Cheonan-si\\n102',\n",
-       " 'Bonghwa-gun': 'Bonghwa-gun\\n70',\n",
-       " 'Bucheon-si': 'Bucheon-si\\n67',\n",
-       " 'Gumi-si': 'Gumi-si\\n64',\n",
-       " 'Yongin-si': 'Yongin-si\\n52',\n",
-       " 'Chilgok-gun': 'Chilgok-gun\\n50',\n",
-       " 'Pohang-si': 'Pohang-si\\n50',\n",
-       " 'Andong-si': 'Andong-si\\n49',\n",
-       " 'Sejong': 'Sejong\\n46',\n",
-       " 'Gyeongju-si': 'Gyeongju-si\\n44',\n",
-       " 'Cheongdo-gun': 'Cheongdo-gun\\n43',\n",
-       " 'Uiseong-gun': 'Uiseong-gun\\n41',\n",
-       " 'Gangnam-gu': 'Gangnam-gu\\n38',\n",
-       " 'Suwon-si': 'Suwon-si\\n37',\n",
-       " 'Yeongcheon-si': 'Yeongcheon-si\\n36',\n",
-       " 'Dongnae-gu': 'Dongnae-gu\\n32',\n",
-       " 'Guro-gu': 'Guro-gu\\n30',\n",
-       " 'Nam-gu': 'Nam-gu\\n28',\n",
-       " 'Changwon-si': 'Changwon-si\\n26',\n",
-       " 'Dongdaemun-gu': 'Dongdaemun-gu\\n26',\n",
-       " 'Seo-gu': 'Seo-gu\\n25',\n",
-       " 'Gimcheon-si': 'Gimcheon-si\\n25',\n",
-       " 'Gangseo-gu': 'Gangseo-gu\\n25',\n",
-       " 'Gwanak-gu': 'Gwanak-gu\\n24',\n",
-       " 'Songpa-gu': 'Songpa-gu\\n24',\n",
-       " 'Gunpo-si': 'Gunpo-si\\n24',\n",
-       " 'Seongju-gun': 'Seongju-gun\\n22',\n",
-       " 'Seocho-gu': 'Seocho-gu\\n21',\n",
-       " 'Dongjak-gu': 'Dongjak-gu\\n21',\n",
-       " 'Eunpyeong-gu': 'Eunpyeong-gu\\n21',\n",
-       " 'Nowon-gu': 'Nowon-gu\\n20',\n",
-       " 'Geochang-gun': 'Geochang-gun\\n19',\n",
-       " 'Yeongdeungpo-gu': 'Yeongdeungpo-gu\\n19',\n",
-       " 'Wonju-si': 'Wonju-si\\n19',\n",
-       " 'Haeundae-gu': 'Haeundae-gu\\n18',\n",
-       " 'Jung-gu': 'Jung-gu\\n18',\n",
-       " 'Goyang-si': 'Goyang-si\\n18',\n",
-       " 'Yangcheon-gu': 'Yangcheon-gu\\n17',\n",
-       " 'Hwaseong-si': 'Hwaseong-si\\n17',\n",
-       " 'Yuseong-gu': 'Yuseong-gu\\n17',\n",
-       " 'Pyeongtaek-si': 'Pyeongtaek-si\\n17',\n",
-       " 'Anyang-si': 'Anyang-si\\n16',\n",
-       " 'Mapo-gu': 'Mapo-gu\\n15',\n",
-       " 'Bupyeong-gu': 'Bupyeong-gu\\n15',\n",
-       " 'Sangju-si': 'Sangju-si\\n15',\n",
-       " 'Ansan-si': 'Ansan-si\\n15',\n",
-       " 'Seongbuk-gu': 'Seongbuk-gu\\n15',\n",
-       " 'Seodaemun-gu': 'Seodaemun-gu\\n14',\n",
-       " 'Yeonsu-gu': 'Yeonsu-gu\\n13',\n",
-       " 'Jongno-gu': 'Jongno-gu\\n13',\n",
-       " 'Geumcheon-gu': 'Geumcheon-gu\\n13',\n",
-       " 'Namyangju-si': 'Namyangju-si\\n13',\n",
-       " 'Busanjin-gu': 'Busanjin-gu\\n13',\n",
-       " 'Jungnang-gu': 'Jungnang-gu\\n13',\n",
-       " 'Gwangju-si': 'Gwangju-si\\n12',\n",
-       " 'Cheongju-si': 'Cheongju-si\\n12',\n",
-       " 'Goesan-gun': 'Goesan-gun\\n11',\n",
-       " 'Chungju-si': 'Chungju-si\\n11',\n",
-       " 'Gimpo-si': 'Gimpo-si\\n10',\n",
-       " 'Dong-gu': 'Dong-gu\\n10',\n",
-       " 'Buk-gu': 'Buk-gu\\n10',\n",
-       " 'Saha-gu': 'Saha-gu\\n10',\n",
-       " 'Suyeong-gu': 'Suyeong-gu\\n9',\n",
-       " 'Icheon-si': 'Icheon-si\\n9',\n",
-       " 'Asan-si': 'Asan-si\\n9',\n",
-       " 'Gangdong-gu': 'Gangdong-gu\\n9',\n",
-       " 'Changnyeong-gun': 'Changnyeong-gun\\n9',\n",
-       " 'Gwangmyeong-si': 'Gwangmyeong-si\\n8',\n",
-       " 'Jeju-do': 'Jeju-do\\n8',\n",
-       " 'Gimhae-si': 'Gimhae-si\\n8',\n",
-       " 'Goryeong-gun': 'Goryeong-gun\\n8',\n",
-       " 'Seosan-si': 'Seosan-si\\n8',\n",
-       " 'Hapcheon-gun': 'Hapcheon-gun\\n8',\n",
-       " 'Michuhol-gu': 'Michuhol-gu\\n8',\n",
-       " 'Yongsan-gu': 'Yongsan-gu\\n8',\n",
-       " 'Namdong-gu': 'Namdong-gu\\n7',\n",
-       " 'Gangneung-si': 'Gangneung-si\\n7',\n",
-       " 'Siheung-si': 'Siheung-si\\n7',\n",
-       " 'Gyeyang-gu': 'Gyeyang-gu\\n6',\n",
-       " 'Eumseong-gun': 'Eumseong-gun\\n6',\n",
-       " 'Dobong-gu': 'Dobong-gu\\n6',\n",
-       " 'Pocheon-si': 'Pocheon-si\\n6',\n",
-       " 'Geoje-si': 'Geoje-si\\n6',\n",
-       " 'Yecheon-gun': 'Yecheon-gun\\n6',\n",
-       " 'Seongdong-gu': 'Seongdong-gu\\n6',\n",
-       " 'Jeonju-si': 'Jeonju-si\\n5',\n",
-       " 'Uijeongbu-si': 'Uijeongbu-si\\n5',\n",
-       " 'Gangbuk-gu': 'Gangbuk-gu\\n5',\n",
-       " 'Chuncheon-si': 'Chuncheon-si\\n5',\n",
-       " 'Miryang-si': 'Miryang-si\\n5',\n",
-       " 'Paju-si': 'Paju-si\\n5',\n",
-       " 'Yeongju-si': 'Yeongju-si\\n5',\n",
-       " 'Uiwang-si': 'Uiwang-si\\n5',\n",
-       " 'Gwacheon-si': 'Gwacheon-si\\n5',\n",
-       " 'Gwangjin-gu': 'Gwangjin-gu\\n5',\n",
-       " 'Geumjeong-gu': 'Geumjeong-gu\\n5',\n",
-       " 'Buyeo-gun': 'Buyeo-gun\\n5',\n",
-       " 'Yeonje-gu': 'Yeonje-gu\\n4',\n",
-       " 'Dalseo-gu': 'Dalseo-gu\\n4',\n",
-       " 'Osan-si': 'Osan-si\\n4',\n",
-       " 'Mokpo-si': 'Mokpo-si\\n3',\n",
-       " 'Mungyeong-si': 'Mungyeong-si\\n3',\n",
-       " 'Gunsan-si': 'Gunsan-si\\n3',\n",
-       " 'Ulju-gun': 'Ulju-gun\\n3',\n",
-       " 'Jinju-si': 'Jinju-si\\n3',\n",
-       " 'Guri-si': 'Guri-si\\n3',\n",
-       " 'Yangsan-si': 'Yangsan-si\\n3',\n",
-       " 'Hongseong-gun': 'Hongseong-gun\\n2',\n",
-       " 'Jeungpyeong-gun': 'Jeungpyeong-gun\\n2',\n",
-       " 'Sasang-gu': 'Sasang-gu\\n2',\n",
-       " 'Suseong-gu': 'Suseong-gu\\n2',\n",
-       " 'Daedeok-gu': 'Daedeok-gu\\n2',\n",
-       " 'Cheongsong-gun': 'Cheongsong-gun\\n2',\n",
-       " 'Goseong-gun': 'Goseong-gun\\n2',\n",
-       " 'Hanam-si': 'Hanam-si\\n1',\n",
-       " 'Hwasun-gun': 'Hwasun-gun\\n1',\n",
-       " 'Gyeryong-si': 'Gyeryong-si\\n1',\n",
-       " 'Namhae-gun': 'Namhae-gun\\n1',\n",
-       " 'Dalseong-gun': 'Dalseong-gun\\n1',\n",
-       " 'Inje-gun': 'Inje-gun\\n1',\n",
-       " 'Jincheon-gun': 'Jincheon-gun\\n1',\n",
-       " 'Gimje-si': 'Gimje-si\\n1',\n",
-       " 'Iksan-si': 'Iksan-si\\n1',\n",
-       " 'Danyang-gun': 'Danyang-gun\\n1',\n",
-       " 'Taebaek-si': 'Taebaek-si\\n1',\n",
-       " 'Hamyang-gun': 'Hamyang-gun\\n1',\n",
-       " 'Anseong-si': 'Anseong-si\\n1',\n",
-       " 'Suncheon-si': 'Suncheon-si\\n1',\n",
-       " 'Yeosu-si': 'Yeosu-si\\n1',\n",
-       " 'Gijang-gun': 'Gijang-gun\\n1',\n",
-       " 'Sokcho-si': 'Sokcho-si\\n1',\n",
-       " 'Gwangyang-si': 'Gwangyang-si\\n1',\n",
-       " 'Haman-gun': 'Haman-gun\\n1',\n",
-       " 'Muan-gun': 'Muan-gun\\n1',\n",
-       " 'Yeongyang-gun': 'Yeongyang-gun\\n1',\n",
-       " 'Taean-gun': 'Taean-gun\\n1'}"
-      ]
-     },
-     "execution_count": 622,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 623,
+   "execution_count": 884,
    "metadata": {},
    "outputs": [],
    "source": [
-    "node_list = [node_names,node_sizes]"
+    "node_size = [50*node_sizes[ii] for ii in range(len(node_names))]# MADE THIS 50 * COUNT as the values were too small to see"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 624,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Gyeongsan-si'"
-      ]
-     },
-     "execution_count": 624,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "node_list[0][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 625,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "614"
-      ]
-     },
-     "execution_count": 625,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "node_list[1][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 626,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "node_size = [50*node_list[1][ii] for ii in range(len(node_names))] # MADE THIS 50 * COUNT as the values were too small to see"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 627,
+   "execution_count": 885,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 628,
+   "execution_count": 886,
    "metadata": {},
    "outputs": [
     {
@@ -813,21 +616,21 @@
        "614"
       ]
      },
-     "execution_count": 628,
+     "execution_count": 886,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "for ii in range(len(node_names)):\n",
-    "    attrs = {node_list[0][ii]: {'Cases': node_list[1][ii]}}\n",
+    "    attrs = {node_names[ii]: {'Cases': node_sizes[ii]}}\n",
     "    nx.set_node_attributes(graph, attrs)\n",
     "graph.nodes['Gyeongsan-si']['Cases']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 629,
+   "execution_count": 887,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 630,
+   "execution_count": 888,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 631,
+   "execution_count": 889,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 641,
+   "execution_count": 890,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 650,
+   "execution_count": 891,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -927,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 652,
+   "execution_count": 892,
    "metadata": {},
    "outputs": [
     {
@@ -948,14 +751,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 635,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#attrs = {node_list[0][0]: {'Cases': 20, 'Males': 1, 'Females': 1, 'Age Groups': 1}}\n",
-    "#nx.set_node_attributes(G, attrs)\n",
-    "#G.nodes[0]['Cases']\n",
-    "#nx.draw(G)"
+    "#fig = plt.figure(1,figsize=(20,20)) \n",
+    "#pos = nx.random_layout(graph)\n",
+    "\n",
+    "def animate(i):\n",
+    "    if (i == 0):\n",
+    "        new_df = df.set_index('confirmed_date')\n",
+    "        new_df = new_df[new_df.index < '0130']\n",
+    "    elif(i == 1):\n",
+    "        new_df = df.set_index('confirmed_date')\n",
+    "        new_df = new_df[new_df.index < '0215']\n",
+    "    elif(i == 2):\n",
+    "        new_df = df.set_index('confirmed_date')\n",
+    "        new_df = new_df[new_df.index < '0230'] \n",
+    "    elif(i == 3):\n",
+    "        new_df = df.set_index('confirmed_date')\n",
+    "        new_df = new_df[new_df.index < '0315']\n",
+    "    elif(i == 4):\n",
+    "        new_df = df.set_index('confirmed_date')\n",
+    "        new_df = new_df[new_df.index < '0330'] \n",
+    "    \n",
+    "    pos = nx.random_layout(graph)   \n",
+    "    node_names = new_df['city'].value_counts().index.to_list()\n",
+    "    node_sizes = new_df['city'].value_counts().to_list()\n",
+    "    labels = {}\n",
+    "    for name,size in zip(node_names,node_sizes):\n",
+    "        labels[name] = name+ '\\n' +str(size)\n",
+    "        \n",
+    "    node_size = [50*node_sizes[ii] for ii in range(len(node_names))]\n",
+    "    nx.draw(graph,pos,nodelist=node_names,node_size=node_size,node_color='red',labels=labels,with_labels=True)   \n",
+    "    #plt.axis('equal')\n",
+    "    #plt.show()\n",
+    "#    count+=1\n",
+    "\n",
+    "#nx.draw_circular(G)\n",
+    "#fig = plt.figure()\n",
+    "fig = plt.figure(1,figsize=(20,20)) \n",
+    "# Animator call\n",
+    "anim = FuncAnimation(fig, animate, frames=5, interval=1000, repeat=True)\n",
+    "anim.save('test.gif', writer='imagemagick')"
    ]
   },
   {
