--- a/Project.ipynb
+++ b/Project.ipynb
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 458,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +941,7 @@
     "fig = plt.figure(1,figsize=(20,20)) # Create figure with large plot\n",
     "\n",
     "anim = FuncAnimation(fig, animate, frames=len(date_list), interval=400, repeat=True) # Create animation with a date for each frame\n",
-    "anim.save('covid_2.gif', writer='imagemagick') # Save gif for later use"
+    "anim.save('covid.gif', writer='imagemagick') # Save gif for later use"
    ]
   },
   {
