markdown mostly complete

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -10,6 +10,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook aims to graphically display different trends and statistics of COVID-19 in South Korea. Data is first downloaded from the kaggle link and then parse to a usable format. Through out the notebook there is different graphs and outputs found through data analysis, such as summing age groups, genders and deaths. The network becomes larger after the newest version of the csv file has been downloaded.\n",
+    "\n",
+    "The notebook is split into two sections, section one is analysing PatientInfo.csv for various trends, section two is analysing PatientRoute.csv to find different location patterns.\n",
+    "\n",
+    "At the end of the notebook there is the inclusion of an extract of code which was unused in the final version as it proved too confusing and not appropriate for our project."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
